--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <footer>
       <div class="text-center text-white p-3 ">
         <a class="navbar-brand fw-bold fs-3" href="#">
-          <img src="/logo.png " style="object-fit: cover;" alt="" width="35" height="35" class="d-inline-block align-text-top">
+          <img src="logo.png " style="object-fit: cover;" alt="" width="35" height="35" class="d-inline-block align-text-top">
           DLLAJ KOTA BOGOR
         </a>
         <p class="mt-3"> Jl. Raya Tajur No.54, RT.01/RW.04, Pakuan, Kec. Bogor Sel., Kota Bogor, Jawa Barat 16134</p>
